--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,5 +2,5 @@
 add_library(${PROJECT_NAME} INTERFACE)
 
 # add mplite
-set(header_file binary_tree.hpp definitions.hpp architect.hpp)
+set(header_file BT_Traversal.hpp definitions.hpp architect.hpp)
 add_subdirectory(${PROJECT_NAME})
