--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,5 +2,6 @@
 add_library(${PROJECT_NAME} INTERFACE)
 
 # add mplite
-set(header_file BT_Traversal.hpp definitions.hpp architect.hpp dependency_inversion_principle)
+set(header_file BT_Traversal.hpp definitions.hpp architect.hpp dependency_inversion_principle.hpp
+    factory.hpp fight_strategy.hpp)
 add_subdirectory(${PROJECT_NAME})
