--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,10 @@ find_package(OpenMP)
 #----------------------------------------------------------------------------
 find_package(Eigen3)
 
+#----------------------------------------------------------------------------
+# Find vtkio
+#----------------------------------------------------------------------------
+find_package(vtkio)
 
 #----------------------------------------------------------------------------
 # set debug mode 
