--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -59,6 +59,7 @@ set(example_name disjoint_set_example)
 add_gtest_with_libraries(${PROJECT_NAME}_${example_name} ${example_name}.cpp ${PROJECT_NAME})
 target_link_libraries(${PROJECT_NAME}_${example_name} PUBLIC ${PROJECT_NAME})
 target_link_libraries(${PROJECT_NAME}_${example_name} PUBLIC Eigen3::Eigen)
+target_link_libraries(${PROJECT_NAME}_${example_name} PUBLIC vtkio::vtkio)
 if(OpenMP_CXX_FOUND)
     target_link_libraries(${PROJECT_NAME}_${example_name} PUBLIC OpenMP::OpenMP_CXX)
 endif()
