--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,7 +43,7 @@ find_package(Eigen3)
 #----------------------------------------------------------------------------
 # Find vtkio
 #----------------------------------------------------------------------------
-find_package(vtkio)
+# find_package(vtkio)
 
 #----------------------------------------------------------------------------
 # set debug mode 
